make header.html and include it in prod-reg.html

--- a/src/main/resources/templates/product-registration.html
+++ b/src/main/resources/templates/product-registration.html
@@ -5,6 +5,6 @@
     <title>Register Products</title>
   </head>
 <body>
-  <h1>Inventory Management System</h1>
+  <div th:replace="~{header :: header}"></div>
 </body>
 </html>
