--- a/src/main/resources/templates/product-registration.html
+++ b/src/main/resources/templates/product-registration.html
@@ -8,49 +8,48 @@
     <div th:replace="~{header :: header}"></div>
     <main>
       <h2 class="sub-title">Register Products</h2>
-      <form class="form-box" method="post"  action="/product-registration"
+      <form th:object="${product}" class="form-box" method="post"  action="/product-registration"
         enctype="multipart/form-data">
-        <div th:object="${product}" class="items">
-	      <div>
-	        <label>Product Name：</label>
-	        <input class="box long product-name" th:field="*{name}" type="text"/>
-	        <p class="text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"/>
-	      </div>
-          <label>Category：</label>
-          <select class="box short box-style" th:field="*{category}">
-            <option th:each="item : ${T(natureblossom.ims.enums.CategoryEnum).values()}"
-              th:value="${item}" th:text="${item.category}">
-            </option>
-          </select>
-	      <div class="item">
-	        <label>Manufacturer：</label>
-	        <input class="box long" th:field="*{manufacturer}" type="text"/>
-	        <p class="text-danger" th:if="${#fields.hasErrors('manufacturer')}" th:errors="*{manufacturer}"/>
-	      </div>
-	      <div class="item">
-	        <label>Price：</label>
-	        <input class="box short" th:field="*{price}" type="text"/>
-	        <p class="text-danger" th:if="${#fields.hasErrors('price')}" th:errors="*{price}"/>
-	      </div>
-	      <div class="item">
-	        <label>Stock：</label>
-	        <input class="box short" th:field="*{stock}" type="number"/>
-	        <p class="text-danger" th:if="${#fields.hasErrors('stock')}" th:errors="*{stock}"/>
-	      </div>
-          <div class="item">
-            <label>Description：</label>
-            <textarea th:field="*{description}"></textarea>
-            <p class="text-danger" th:if="${#fields.hasErrors('description')}" th:errors="*{description}"/>
-          </div>
+	    <div>
+	      <label>Product Name：</label>
+	      <input class="box long product-name" th:field="*{name}" type="text"/>
+	      <p class="text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"/>
+	    </div>
+        <label>Category：</label>
+        <select class="box short box-style" th:field="*{category}">
+          <option th:each="item : ${T(natureblossom.ims.enums.CategoryEnum).values()}"
+            th:value="${item}" th:text="${item.category}">
+          </option>
+        </select>
+	    <div class="item">
+	      <label>Manufacturer：</label>
+	      <input class="box long" th:field="*{manufacturer}" type="text"/>
+	      <p class="text-danger" th:if="${#fields.hasErrors('manufacturer')}" th:errors="*{manufacturer}"/>
+	    </div>
+	    <div class="item">
+	      <label>Price：</label>
+	      <input class="box short" th:field="*{price}" type="text"/>
+	      <p class="text-danger" th:if="${#fields.hasErrors('price')}" th:errors="*{price}"/>
+	    </div>
+	    <div class="item">
+	      <label>Stock：</label>
+	      <input class="box short" th:field="*{stock}" type="number"/>
+	      <p class="text-danger" th:if="${#fields.hasErrors('stock')}" th:errors="*{stock}"/>
+	    </div>
+        <div class="item">
+          <label>Description：</label>
+          <textarea th:field="*{description}"></textarea>
+          <p class="text-danger" th:if="${#fields.hasErrors('description')}" th:errors="*{description}"/>
         </div>
-	      <div class="item">
-	        <label for="image">Image：</label>
-	        <input name="imgFile" id="image" type="file"/>
-	      </div>
-	      <div class="buttons">
-	        <button class="btn register" type="submit">register</button>
-	        <button class="btn" type="button">clear</button>
-	      </div>   
+	    <div class="item">
+	      <label for="image">Image：</label>
+	      <input name="image" id="image" th:field="*{multipartFile}" type="file"/>
+	      <p class="text-danger" th:if="${#fields.hasErrors('multipartFile')}" th:errors="*{multipartFile}"/>
+	    </div>
+	    <div class="buttons">
+	      <button class="btn register" type="submit">register</button>
+	      <button class="btn" type="button">clear</button>
+	    </div>   
       </form>
     </main>
   </body>
