add getProductList in mapper.xml

--- a/src/main/resources/templates/product-registration.html
+++ b/src/main/resources/templates/product-registration.html
@@ -48,7 +48,7 @@
 	    </div>
 	    <div class="buttons">
 	      <button class="btn register" type="submit">register</button>
-	      <button class="btn" type="button">clear</button>
+	      <button class="btn" onclick="location.href='product-registration'">clear</button>
 	    </div>   
       </form>
     </main>
