add success message after registering prod

--- a/src/main/resources/templates/product-list.html
+++ b/src/main/resources/templates/product-list.html
@@ -8,6 +8,7 @@
     <div th:replace="~{header :: header}"></div>
     <main>
       <h2 class="sub-title">Product List</h2>
+      <label class="messages layout" th:if="${message}" th:text="${message}"></label>
       <button class="btn" onclick="location.href='product-registration'">register</button>
       <label class="item-count" th:text="'Total items: ' + ${itemCount}"></label>
       <div class="scroll-bar">
@@ -25,9 +26,8 @@
 	      <tbody>
 	        <tr class="table-rows" th:each="item: ${prodList}">
 	          <td>
-	            <!-- <img class="product-img" th:src="${path}"
-	              onerror="" th:alt="${item.name}"/> -->
-	              <label th:text="${item.filePath}"></label>
+	            <!-- <img class="product-img" th:src="" onerror=""
+	              th:alt="${item.name}"/> -->
 	          </td>
 	          <td class="format id-price-format"><label th:text="${item.id}"></label></td>
 	          <td class="format"><label th:text="${item.name}"></label></td>
