--- a/src/main/resources/templates/product-update.html
+++ b/src/main/resources/templates/product-update.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8"></meta>
     <title>Update Products</title>
+    <link rel="stylesheet"
+	  th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
+    <script th:src="@{/webjars/jquery/jquery.min.js}" defer></script>
+    <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}" defer></script>
   </head>
   <body>
     <div th:replace="~{header :: header}"></div>
