add style to prod reg page

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -6,7 +6,9 @@
   </head>
   <body>
     <header th:fragment="header">
-      <h1>Inventory Management System</h1>
+      <div class="header-area mt-0">
+        <h1 class="text-center my-3">Inventory Management System</h1>
+      </div> 
     </header>
   </body>
 </html>
