--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -6,9 +6,37 @@ Common to all pages
 
 ------------------*/
 
+html {
+  margin: 0;
+  padding: 0;
+}
 body {
   font-family: "sans-serif";
   font-size: 1.2rem;
-  margin: 0;
-  padding: 0;
+}
+
+.header-area {
+  width: 100%;
+  height: 50px;
+}
+
+h1 {
+  font-size: 1.8rem;	
+}
+
+h2 {
+  color: #333;
+  font-size: 1.6rem;
+}
+
+.btn {
+  color: #eee;
+  font-size: 1.2rem;
+  background-color: #446688;
+  width: 90px;
+}
+
+.btn:hover {
+  background-color: #99bbdd;
+  color: #4444cc;
 }
