--- a/src/main/resources/templates/product-registration.html
+++ b/src/main/resources/templates/product-registration.html
@@ -5,56 +5,64 @@
     <title>Register Products</title>
     <link rel="stylesheet"
 	  th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
+	<link rel="stylesheet" th:href="@{/css/style.css}">
     <script th:src="@{/webjars/jquery/jquery.min.js}" defer></script>
     <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}" defer></script>
   </head>
   <body>
     <div th:replace="~{header :: header}"></div>
-    <main>
-      <h2 class="sub-title">Register Products</h2>
-      <form th:object="${product}" class="form-box" method="post"  action="/product-registration"
+    <main class="container-fluid">
+      <h2 class="text-center">Register Products</h2>
+      <div class="container">
+      <form th:object="${product}" method="post"  action="/product-registration"
         enctype="multipart/form-data">
-	    <div>
-	      <label>Product Name：</label>
-	      <input class="box long product-name" th:field="*{name}" type="text"/>
+        <div>
+	      <label for="product-name" class="form-label">Product Name：</label>
+	      <input class="form-control" th:field="*{name}"
+	        type="text" aria-label="product-name" id="product-name" />
 	      <p class="text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"/>
-	    </div>
-        <label>Category：</label>
-        <select class="box short box-style" th:field="*{category}">
-          <option th:each="item : ${T(natureblossom.ims.enums.CategoryEnum).values()}"
-            th:value="${item}" th:text="${item.category}">
-          </option>
-        </select>
-	    <div class="item">
-	      <label>Manufacturer：</label>
-	      <input class="box long" th:field="*{manufacturer}" type="text"/>
+        </div>
+        <div class="mt-1">
+          <label for="category" class="form-label">Category：</label>
+          <select class="form-select" id="category" th:field="*{category}">
+            <option th:each="item : ${T(natureblossom.ims.enums.CategoryEnum).values()}"
+              th:value="${item}" th:text="${item.category}">
+            </option>
+          </select>
+        </div>
+        <div class="mt-1">
+	      <label for="manufacturer" class="form-label">Manufacturer：</label>
+	      <input class="form-control" id="manufaturer" th:field="*{manufacturer}" type="text"/>
 	      <p class="text-danger" th:if="${#fields.hasErrors('manufacturer')}" th:errors="*{manufacturer}"/>
 	    </div>
-	    <div class="item">
-	      <label>Price：</label>
-	      <input class="box short" th:field="*{price}" type="text"/>
-	      <p class="text-danger" th:if="${#fields.hasErrors('price')}" th:errors="*{price}"/>
+	    <div class="row mt-1">
+	      <div class="col">
+	        <label for="price" class="form-label">Price：</label>
+	        <input class="form-control" id="price" th:field="*{price}" type="text"/>
+	        <p class="text-danger" th:if="${#fields.hasErrors('price')}" th:errors="*{price}"/>
+	      </div>
+	      <div class="col mt-1">
+	        <label for="stock" class="form-label">Stock：</label>
+	        <input class="form-control" id="stock" th:field="*{stock}" type="number"/>
+	        <p class="text-danger" th:if="${#fields.hasErrors('stock')}" th:errors="*{stock}"/>
+	      </div>
 	    </div>
-	    <div class="item">
-	      <label>Stock：</label>
-	      <input class="box short" th:field="*{stock}" type="number"/>
-	      <p class="text-danger" th:if="${#fields.hasErrors('stock')}" th:errors="*{stock}"/>
-	    </div>
-        <div class="item">
-          <label>Description：</label>
-          <textarea th:field="*{description}"></textarea>
+        <div class="mt-1">
+          <label for="description" class="form-label">Description：</label>
+          <textarea class="form-control" id="description" th:field="*{description}"></textarea>
           <p class="text-danger" th:if="${#fields.hasErrors('description')}" th:errors="*{description}"/>
         </div>
-	    <div class="item">
-	      <label for="image">Image：</label>
-	      <input name="image" id="image" th:field="*{multipartFile}" type="file"/>
+	    <div class="mt-1">
+	      <label for="image" class="form-label">Image：</label>
+	      <input name="image" class="form-control" id="image" th:field="*{multipartFile}" type="file"/>
 	      <p class="text-danger" th:if="${#fields.hasErrors('multipartFile')}" th:errors="*{multipartFile}"/>
 	    </div>
-	    <div class="buttons">
-	      <button class="btn register" type="submit">register</button>
-	      <button class="btn" onclick="location.href='product-registration'">clear</button>
+	    <div class="mt-2">
+	      <button class="btn py-1 px-2" type="submit">register</button>
+	      <button class="btn py-1 px-2" onclick="location.href='product-registration'">clear</button>
 	    </div>   
       </form>
+      </div>
     </main>
   </body>
 </html>
