--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -15,6 +15,10 @@ body {
   font-size: 1.2rem;
 }
 
+main {
+  min-height: 80vh;  
+}
+
 .header-area {
   width: 100%;
   height: 50px;
@@ -37,6 +41,19 @@ h2 {
 }
 
 .btn:hover {
-  background-color: #99bbdd;
-  color: #4444cc;
+  background-color: #88aadd;
+  color:c#2222cc;
+}
+
+.footer-area {
+  width: 100%;
+  height: 80px;
+  background-color: #eee;
+}
+
+/**
+ *register and update pages
+ */
+.select-box {
+  width: 350px;
 }
