--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -5,7 +5,6 @@
 Common to all pages
 
 ------------------*/
-
 html {
   margin: 0;
   padding: 0;
@@ -51,9 +50,21 @@ h2 {
   background-color: #eee;
 }
 
-/**
- *register and update pages
- */
+/** ---------------------------
+
+Register and Update pages
+ 
+---------------------------- */
 .select-box {
   width: 350px;
+}
+
+/** ---------------------------
+
+Product update page
+ 
+---------------------------- */
+.input-id {
+  border: none;
+  width: 40px;
 }
