--- a/src/main/resources/templates/product-list.html
+++ b/src/main/resources/templates/product-list.html
@@ -5,44 +5,50 @@
     <title>Product List</title>
     <link rel="stylesheet"
 	  th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
+	<link rel="stylesheet" th:href="@{/css/style.css}">
     <script th:src="@{/webjars/jquery/jquery.min.js}" defer></script>
     <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}" defer></script>
   </head>
   <body>
     <div th:replace="~{header :: header}"></div>
-    <main>
-      <h2 class="sub-title">Product List</h2>
-      <label class="messages layout" th:if="${message}" th:text="${message}"></label>
-      <button class="btn" onclick="location.href='product-registration'">register</button>
-      <label class="item-count" th:text="'Total items: ' + ${itemCount}"></label>
-      <div class="scroll-bar">
-        <table border="1">
-          <thead class="bg-color">
+    <main class="container-fluid justify-content">
+      <h2 class="text-center">Product List</h2>
+      <label class="messages" th:if="${message}" th:text="${message}"></label>
+      <div class="col-4 offset-7">
+        <button class="btn register-btn mx-3 px-2" onclick="location.href='product-registration'">register new product</button>
+      </div>
+      <label class="mt-3 col-4 offset-8" th:text="'Total items: ' + ${itemCount}"></label>
+      <div class="d-flex justify-content-center">
+        <table>
+          <thead class="table-headding">
             <tr>
-              <th>image</th>
-              <th>id</th>
-	          <th>name</th>     
-	          <th>price</th>
-	          <th>stock</th>
-	          <th>update</th>
+              <th class="text-center image-col">image</th>
+              <th class="text-center px-1">id</th>
+              <th class="text-center category-col">category</th> 
+	          <th class="text-center name-col">name</th>     
+	          <th class="text-center">price</th>
+	          <th class="text-center px-1">stock</th>
+	          <th class="text-center">update</th>
 	        </tr>
 	      </thead>
 	      <tbody>
 	        <tr class="table-rows" th:each="item: ${prodList}">
-	          <td>
+	          <td class="px-1">
+	            <div class="image"></div>
 	            <!-- <img class="product-img" th:src="" onerror=""
 	              th:alt="${item.name}"/> -->
 	          </td>
-	          <td class="format id-price-format"><label th:text="${item.id}"></label></td>
-	          <td class="format"><label th:text="${item.name}"></label></td>
-	          <td class="format">
-	            <label th:text="${#numbers.formatDecimal(item.price,1,2)}"></label>
+	          <td class="id-price-format px-1 text-center"><span th:text="${item.id}"></span></td>
+	          <td class="px-1"><span th:text="${item.category}"></span></td>
+	          <td class="px-1"><span th:text="${item.name}"></span></td>
+	          <td class="px-1">
+	            <span th:text="${#numbers.formatDecimal(item.price,1,2)}"></span>
 	          </td>
-	          <td class="format"><label th:text="${item.stock}"></label></td>
-	          <td>
+	          <td class="px-1 text-center"><span th:text="${item.stock}"></span></td>
+	          <td class="px-1">
 	            <form action="/product-update" method="get">
 	              <input type="hidden" th:value="${item.id}" name="id"/>
-	              <button class="list-update" type="submit">update</button>
+	              <button class="btn update-btn py-0 px-0" type="submit">update</button>
 	            </form>
 	          </td>
 	        </tr>
