--- a/src/main/resources/templates/product-registration.html
+++ b/src/main/resources/templates/product-registration.html
@@ -14,6 +14,9 @@
     <main class="container-fluid">
       <h2 class="text-center">Register Products</h2>
       <div class="container">
+      <div class="col-4 offset-8">
+        <button class="btn px-2 mx-2" onclick="location.href='product-list'">product list</button>
+      </div>
       <form th:object="${product}" method="post"  action="/product-registration"
         enctype="multipart/form-data" role="form">
         <div>
@@ -57,7 +60,7 @@
 	      <input name="image" class="form-control" id="image" th:field="*{multipartFile}" type="file"/>
 	      <p class="text-danger" th:if="${#fields.hasErrors('multipartFile')}" th:errors="*{multipartFile}"/>
 	    </div>
-	    <div class="mt-3">
+	    <div class="my-3">
 	      <button class="btn py-1 px-2" type="submit">register</button>
 	      <button class="btn py-1 px-2" onclick="location.href='product-registration'">clear</button>
 	    </div>   
