--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header th:fragment="header">
-      <div class="header-area mt-0">
+      <div class="header-area mt-0 px-1">
         <h1 class="text-center my-3">Inventory Management System</h1>
       </div> 
     </header>
