--- a/src/main/resources/templates/product-list.html
+++ b/src/main/resources/templates/product-list.html
@@ -11,49 +11,53 @@
   </head>
   <body>
     <div th:replace="~{header :: header}"></div>
-    <main class="container-fluid justify-content">
+    <main class="container">
       <h2 class="text-center">Product List</h2>
       <label class="messages" th:if="${message}" th:text="${message}"></label>
-      <div class="col-4 offset-7">
-        <button class="btn register-btn mx-3 px-2" onclick="location.href='product-registration'">register new product</button>
-      </div>
-      <label class="mt-3 col-4 offset-8" th:text="'Total items: ' + ${itemCount}"></label>
-      <div class="d-flex justify-content-center">
-        <table>
-          <thead class="table-headding">
-            <tr>
-              <th class="text-center image-col">image</th>
-              <th class="text-center px-1">id</th>
-              <th class="text-center category-col">category</th> 
-	          <th class="text-center name-col">name</th>     
-	          <th class="text-center">price</th>
-	          <th class="text-center px-1">stock</th>
-	          <th class="text-center">update</th>
-	        </tr>
-	      </thead>
-	      <tbody>
-	        <tr class="table-rows" th:each="item: ${prodList}">
-	          <td class="px-1">
+      <div class="list-content">
+        <div class="d-flex justify-content-end">
+          <button class="btn px-2" onclick="location.href='product-registration'">register new product</button>
+        </div>
+        <div class="d-flex justify-content-end">
+          <label class="mt-3" th:text="'Total items: ' + ${itemCount}"></label>
+        </div>
+        <div class="d-flex justify-content-center">
+          <table>
+            <thead class="table-headding">
+              <tr>
+                <th class="text-center image-col">image</th>
+                <th class="text-center px-1">id</th>
+                <th class="text-center category-col">category</th> 
+	            <th class="text-center name-col">name</th>     
+	            <th class="text-center">price</th>
+	            <th class="text-center px-1">stock</th>
+	            <th class="text-center">update</th>
+	          </tr>
+	        </thead>
+	        <tbody>
+	          <tr class="table-rows" th:each="item: ${prodList}">
+	            <td class="px-1">
 	            <div class="image"></div>
 	            <!-- <img class="product-img" th:src="" onerror=""
 	              th:alt="${item.name}"/> -->
-	          </td>
-	          <td class="id-price-format px-1 text-center"><span th:text="${item.id}"></span></td>
-	          <td class="px-1"><span th:text="${item.category}"></span></td>
-	          <td class="px-1"><span th:text="${item.name}"></span></td>
-	          <td class="px-1">
-	            <span th:text="${#numbers.formatDecimal(item.price,1,2)}"></span>
-	          </td>
-	          <td class="px-1 text-center"><span th:text="${item.stock}"></span></td>
-	          <td class="px-1">
-	            <form action="/product-update" method="get">
-	              <input type="hidden" th:value="${item.id}" name="id"/>
-	              <button class="btn update-btn py-0 px-0" type="submit">update</button>
-	            </form>
-	          </td>
-	        </tr>
-	      </tbody>
-        </table>
+	            </td>
+	            <td class="id-price-format px-1 text-center"><span th:text="${item.id}"></span></td>
+	            <td class="px-1"><span th:text="${item.category}"></span></td>
+	            <td class="px-1"><span th:text="${item.name}"></span></td>
+	            <td class="px-1">
+	              <span th:text="${#numbers.formatDecimal(item.price,1,2)}"></span>
+	            </td>
+	            <td class="px-1 text-center"><span th:text="${item.stock}"></span></td>
+	            <td class="px-1">
+	              <form action="/product-update" method="get">
+	                <input type="hidden" th:value="${item.id}" name="id"/>
+	                <button class="btn update-btn py-0 px-0" type="submit">update</button>
+	              </form>
+	            </td>
+	          </tr>
+	        </tbody>
+          </table>
+        </div>
       </div>
     </main>
     <div th:replace="~{footer :: footer}"></div>
