--- a/src/main/resources/templates/product-registration.html
+++ b/src/main/resources/templates/product-registration.html
@@ -13,58 +13,58 @@
     <div th:replace="~{header :: header}"></div>
     <main class="container-fluid">
       <h2 class="text-center">Register Products</h2>
-      <div class="container">
-      <div class="col-4 offset-8">
-        <button class="btn px-2 mx-2" onclick="location.href='product-list'">product list</button>
-      </div>
-      <form th:object="${product}" method="post"  action="/product-registration"
-        enctype="multipart/form-data" role="form">
-        <div>
-	      <label for="product-name" class="item-label">Product Name：</label>
-	      <input class="form-control" th:field="*{name}"
-	        type="text" aria-label="product-name" id="product-name" />
-	      <p class="text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"/>
+      <div class="container content-box">
+        <div class="d-flex justify-content-end mx-3">
+          <button class="btn px-2" onclick="location.href='product-list'">product list</button>
         </div>
-        <div class="mt-1 col-6">
-          <label for="category" class="item-label">Category：</label>
-          <select class="form-select" id="category" th:field="*{category}">
-            <option th:each="item : ${T(natureblossom.ims.enums.CategoryEnum).values()}"
-              th:value="${item}" th:text="${item.category}">
-            </option>
-          </select>
-        </div>
-        <div class="mt-1">
-	      <label for="manufacturer" class="item-label">Manufacturer：</label>
-	      <input class="form-control" id="manufaturer" th:field="*{manufacturer}" type="text"/>
-	      <p class="text-danger" th:if="${#fields.hasErrors('manufacturer')}" th:errors="*{manufacturer}"/>
-	    </div>
-	    <div class="row mt-1">
-	      <div class="col">
-	        <label for="price" class="item-label">Price：</label>
-	        <input class="form-control" id="price" th:field="*{price}" type="text"/>
-	        <p class="text-danger" th:if="${#fields.hasErrors('price')}" th:errors="*{price}"/>
+        <form th:object="${product}" method="post"
+          action="/product-registration" enctype="multipart/form-data" role="form">
+          <div>
+	        <label for="product-name" class="item-label">Product Name：</label>
+	        <input class="form-control" th:field="*{name}"
+	          type="text" aria-label="product-name" id="product-name" />
+	        <p class="text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"/>
+          </div>
+          <div class="mt-1 col-6">
+            <label for="category" class="item-label">Category：</label>
+            <select class="form-select" id="category" th:field="*{category}">
+              <option th:each="item : ${T(natureblossom.ims.enums.CategoryEnum).values()}"
+                th:value="${item}" th:text="${item.category}">
+              </option>
+            </select>
+          </div>
+          <div class="mt-1">
+	        <label for="manufacturer" class="item-label">Manufacturer：</label>
+	        <input class="form-control" id="manufaturer" th:field="*{manufacturer}" type="text"/>
+	        <p class="text-danger" th:if="${#fields.hasErrors('manufacturer')}" th:errors="*{manufacturer}"/>
 	      </div>
-	      <div class="col">
-	        <label for="stock" class="item-label">Stock：</label>
-	        <input class="form-control" id="stock" th:field="*{stock}" type="number"/>
-	        <p class="text-danger" th:if="${#fields.hasErrors('stock')}" th:errors="*{stock}"/>
+	      <div class="row mt-1">
+	        <div class="col">
+	          <label for="price" class="item-label">Price：</label>
+	          <input class="form-control" id="price" th:field="*{price}" type="text"/>
+	          <p class="text-danger" th:if="${#fields.hasErrors('price')}" th:errors="*{price}"/>
+	        </div>
+	        <div class="col">
+	          <label for="stock" class="item-label">Stock：</label>
+	          <input class="form-control" id="stock" th:field="*{stock}" type="number"/>
+	          <p class="text-danger" th:if="${#fields.hasErrors('stock')}" th:errors="*{stock}"/>
+	        </div>
 	      </div>
-	    </div>
-        <div class="mt-1">
-          <label for="description" class="item-label">Description：</label>
-          <textarea class="form-control" id="description" th:field="*{description}"></textarea>
-          <p class="text-danger" th:if="${#fields.hasErrors('description')}" th:errors="*{description}"/>
-        </div>
-	    <div class="mt-1 col-6">
-	      <label for="image" class="item-label">Image：</label>
-	      <input name="image" class="form-control" id="image" th:field="*{multipartFile}" type="file"/>
-	      <p class="text-danger" th:if="${#fields.hasErrors('multipartFile')}" th:errors="*{multipartFile}"/>
-	    </div>
-	    <div class="my-3">
-	      <button class="btn py-1 px-2" type="submit">register</button>
-	      <button class="btn py-1 px-2" onclick="location.href='product-registration'">clear</button>
-	    </div>   
-      </form>
+          <div class="mt-1">
+            <label for="description" class="item-label">Description：</label>
+            <textarea class="form-control" id="description" th:field="*{description}"></textarea>
+            <p class="text-danger" th:if="${#fields.hasErrors('description')}" th:errors="*{description}"/>
+          </div>
+	      <div class="mt-1 col-6">
+	        <label for="image" class="item-label">Image：</label>
+	        <input name="image" class="form-control" id="image" th:field="*{multipartFile}" type="file"/>
+	        <p class="text-danger" th:if="${#fields.hasErrors('multipartFile')}" th:errors="*{multipartFile}"/>
+	      </div>
+	      <div class="my-3">
+	        <button class="btn py-1 px-2" type="submit">register</button>
+	        <button class="btn py-1 px-2" onclick="location.href='product-registration'">clear</button>
+	      </div>   
+        </form>
       </div>
     </main>
     <div th:replace="~{footer :: footer}"></div>
