--- a/src/main/resources/templates/product-registration.html
+++ b/src/main/resources/templates/product-registration.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" th:href="@{/css/style.css}">
     <script th:src="@{/webjars/jquery/jquery.min.js}" defer></script>
     <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}" defer></script>
+    <script th:src="@{/js/alert.js}" defer></script>
   </head>
   <body>
     <div th:replace="~{header :: header}"></div>
