--- a/src/main/resources/templates/product-list.html
+++ b/src/main/resources/templates/product-list.html
@@ -8,12 +8,16 @@
 	<link rel="stylesheet" th:href="@{/css/style.css}">
     <script th:src="@{/webjars/jquery/jquery.min.js}" defer></script>
     <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}" defer></script>
+    <script th:src="@{/js/script.js}" defer></script>
   </head>
   <body>
     <div th:replace="~{header :: header}"></div>
     <main class="container">
       <h2 class="text-center">Product List</h2>
-      <label class="messages" th:if="${message}" th:text="${message}"></label>
+      <div id="message" th:if="${message}" role="alert"
+        class="alert alert-success alert-dismissible text-center">
+        <span th:text="${message}"></span>
+      </div>
       <div class="list-content">
         <div class="d-flex justify-content-end">
           <button class="btn px-2" onclick="location.href='product-registration'">register new product</button>
@@ -32,6 +36,7 @@
 	            <th class="text-center">price</th>
 	            <th class="text-center px-1">stock</th>
 	            <th class="text-center">update</th>
+	            <th class="text-center">delete</th>
 	          </tr>
 	        </thead>
 	        <tbody>
@@ -52,6 +57,12 @@
 	              <form action="/product-update" method="get">
 	                <input type="hidden" th:value="${item.id}" name="id"/>
 	                <button class="btn update-btn py-0 px-0" type="submit">update</button>
+	              </form>
+	            </td>
+	            <td class="px-1">
+	              <form action="/delete" method="post">
+	                <input type="hidden" th:value="${item.id}" name="id"/>
+	                <button class="btn update-btn py-0 px-0" type="submit">delete</button>
 	              </form>
 	            </td>
 	          </tr>
