--- a/src/main/resources/templates/product-list.html
+++ b/src/main/resources/templates/product-list.html
@@ -20,7 +20,9 @@
       </div>
       <div class="list-content">
         <div class="d-flex justify-content-end">
-          <button class="btn px-2" onclick="location.href='product-registration'">register new product</button>
+          <button class="btn px-2" onclick="location.href='product-registration'">
+            register new product
+          </button>
         </div>
         <div class="d-flex justify-content-end">
           <label class="mt-3" th:text="'Total items: ' + ${itemCount}"></label>
@@ -50,7 +52,7 @@
 	            <td class="px-1"><span th:text="${item.category}"></span></td>
 	            <td class="px-1"><span th:text="${item.name}"></span></td>
 	            <td class="px-1">
-	              <span th:text="${#numbers.formatDecimal(item.price,1,2)}"></span>
+	              $<span th:text="${#numbers.formatDecimal(item.price,1,2)}"></span>
 	            </td>
 	            <td class="px-1 text-center"><span th:text="${item.stock}"></span></td>
 	            <td class="px-1">
@@ -62,7 +64,9 @@
 	            <td class="px-1">
 	              <form action="/delete" method="post">
 	                <input type="hidden" th:value="${item.id}" name="id"/>
-	                <button class="btn update-btn py-0 px-0" type="submit">delete</button>
+	                <button type="button" class="btn update-btn py-0 px-0" data-bs-toggle="modal"
+	                  data-bs-target="#confirmDelete">delete</button>
+	                <div th:replace="~{modal :: modal}"></div>
 	              </form>
 	            </td>
 	          </tr>
