--- a/src/main/resources/templates/product-update.html
+++ b/src/main/resources/templates/product-update.html
@@ -22,6 +22,7 @@
           action="/product-update" enctype="multipart/form-data">
           <input type="hidden" th:field="*{delFlg}" />
           <input type="hidden" th:field="*{filePath}" />
+          <input type="hidden" th:field="*{fileName}" />
           <input type="hidden" th:field="*{updatedAt}" />
           <span>
             <label for="id">ID:</label>
@@ -67,11 +68,22 @@
 	        <textarea class="form-control" th:field="*{description}"></textarea>
 	        <p class="text-danger" th:if="${#fields.hasErrors('description')}" th:errors="*{description}"/>
 	      </div>
-	      <div class="col-6 mt-1">
-	        <label for="multipartFile">Image：</label>
-	        <input name="image" class="form-control"
-	          th:field="*{multipartFile}" type="file"/>
-	        <p class="text-danger" th:if="${#fields.hasErrors('multipartFile')}" th:errors="*{multipartFile}"/>
+	      <div class="row mt-1">
+	        <div class="col-5">
+	          <label for="multipartFile">Image：</label>
+	          <input name="image" class="form-control"
+	            th:field="*{multipartFile}" type="file"/>
+	          <p class="text-danger" th:if="${#fields.hasErrors('multipartFile')}" th:errors="*{multipartFile}"/>
+	        </div>
+	        <div class="col-6 fs-6 mt-4 d-flex flex-column" th:if="*{fileName}">
+	          <span>Current image file: <label th:text=*{fileName}></label></span>
+	          <span>
+                <input class="form-check-input" type="checkbox" name="curr-img" id="curr-img">
+                <label class="form-check-label" for="curr-img">
+                  remove image
+                </label>
+              </span>
+            </div>
 	      </div>
 	      <div class="my-2">
 	        <button class="btn" type="submit">update</button>
