add quantity input box to register & update pages

--- a/src/main/resources/templates/product-list.html
+++ b/src/main/resources/templates/product-list.html
@@ -35,7 +35,8 @@
                 <th class="text-center px-1">id</th>
                 <th class="text-center category-col">category</th> 
 	            <th class="text-center name-col">name</th>
-	            <th class="text-center name-col">manufacturer</th>   
+	            <th class="text-center">manufacturer</th>
+	            <th class="text-center">qty. per pck</th>  
 	            <th class="text-center">price</th>
 	            <th class="text-center px-1">stock</th>
 	            <th class="text-center">update</th>
@@ -53,6 +54,7 @@
 	            <td class="px-1"><span th:text="${item.category}"></span></td>
 	            <td class="px-1"><span th:text="${item.name}"></span></td>
 	            <td class="px-1"><span th:text="${item.manufacturer}"></span></td>
+	            <td class="px-1"><span th:text="${item.quantity}"></span></td>
 	            <td class="px-1">
 	              $<span th:text="${#numbers.formatDecimal(item.price,1,2)}"></span>
 	            </td>
