--- a/src/main/resources/templates/product-registration.html
+++ b/src/main/resources/templates/product-registration.html
@@ -20,27 +20,34 @@
         </div>
         <form th:object="${product}" method="post"
           action="/product-registration" enctype="multipart/form-data" role="form">
-          <div>
-	        <label for="product-name" class="item-label">Product Name：</label>
-	        <input class="form-control" th:field="*{name}"
-	          type="text" aria-label="product-name" id="product-name" />
-	        <p class="text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"/>
+          <div class="row">
+            <div class="col-6">
+	          <label for="product-name" class="item-label">Product Name：</label>
+	          <input class="form-control" th:field="*{name}"
+	            type="text" aria-label="product-name" id="product-name" />
+	          <p class="text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"/>
+            </div>   
+            <div class="mt-1 col-6">
+              <label for="category" class="item-label">Category：</label>
+              <select class="form-select" id="category" th:field="*{category}">
+                <option th:each="item : ${T(natureblossom.ims.enums.CategoryEnum).values()}"
+                  th:value="${item}" th:text="${item.category}">
+                </option>
+              </select>
+            </div>
           </div>
-          <div class="mt-1 col-6">
-            <label for="category" class="item-label">Category：</label>
-            <select class="form-select" id="category" th:field="*{category}">
-              <option th:each="item : ${T(natureblossom.ims.enums.CategoryEnum).values()}"
-                th:value="${item}" th:text="${item.category}">
-              </option>
-            </select>
-          </div>
-          <div class="mt-1">
+          <div class="col-6 mt-1">
 	        <label for="manufacturer" class="item-label">Manufacturer：</label>
 	        <input class="form-control" id="manufaturer" th:field="*{manufacturer}" type="text"/>
 	        <p class="text-danger" th:if="${#fields.hasErrors('manufacturer')}" th:errors="*{manufacturer}"/>
 	      </div>
-	      <div class="row mt-1">
-	        <div class="col">
+  	      <div class="row mt-1">
+  	        <div class="col-6">
+	          <label for="quantity" class="item-label">Quantity per package：</label>
+	          <input class="form-control" id="quantity" th:field="*{quantity}" type="number"/>
+	          <p class="text-danger" th:if="${#fields.hasErrors('quantity')}" th:errors="*{quantity}"/>
+	        </div>
+	        <div class="col-6">
 	          <label for="price" class="item-label">Price：</label>
 	          <div class="d-flex">
 	            <span class="mt-1">$</span>
@@ -48,11 +55,11 @@
 	          </div>
 	          <p class="text-danger" th:if="${#fields.hasErrors('price')}" th:errors="*{price}"/>
 	        </div>
-	        <div class="col">
-	          <label for="stock" class="item-label">Stock：</label>
-	          <input class="form-control" id="stock" th:field="*{stock}" type="number"/>
-	          <p class="text-danger" th:if="${#fields.hasErrors('stock')}" th:errors="*{stock}"/>
-	        </div>
+	      </div>     
+	      <div class="col-6">
+	        <label for="stock" class="item-label">Stock：</label>
+	        <input class="form-control" id="stock" th:field="*{stock}" type="number"/>
+	        <p class="text-danger" th:if="${#fields.hasErrors('stock')}" th:errors="*{stock}"/>
 	      </div>
           <div class="mt-1">
             <label for="description" class="item-label">Description：</label>
