--- a/src/main/resources/templates/product-list.html
+++ b/src/main/resources/templates/product-list.html
@@ -20,9 +20,10 @@
       </div>
       <div class="list-content">
         <div class="d-flex justify-content-end">
-          <button class="btn px-2" onclick="location.href='product-registration'">
-            register new product
-          </button>
+          <a class="link" href="http://localhost:8080/product-registration">
+            <i class="fa-regular fa-pen-to-square"></i>
+            register new products
+          </a>
         </div>
         <div class="d-flex justify-content-end">
           <label class="mt-3" th:text="'Total items: ' + ${itemCount}"></label>
@@ -39,8 +40,7 @@
 	            <th class="text-center">qty. per pck</th>  
 	            <th class="text-center">price</th>
 	            <th class="text-center px-1">stock</th>
-	            <th class="text-center">update</th>
-	            <th class="text-center">delete</th>
+	            <th class="text-center" colspan="2">edit/delete</th>
 	          </tr>
 	        </thead>
 	        <tbody>
@@ -59,17 +59,21 @@
 	              $<span th:text="${#numbers.formatDecimal(item.price,1,2)}"></span>
 	            </td>
 	            <td class="px-1 text-center"><span th:text="${item.stock}"></span></td>
-	            <td class="px-1">
+	            <td class="px-1 text-center">
 	              <form action="/product-update" method="get">
 	                <input type="hidden" th:value="${item.id}" name="id"/>
-	                <button class="btn update-btn py-0 px-0" type="submit">update</button>
+	                <button class="btn-icon py-0 px-0" type="submit">
+	                  <i class="fa-regular fa-pen-to-square"></i>
+	                </button>
 	              </form>
 	            </td>
-	            <td class="px-1">
+	            <td class="px-1 text-center">
 	              <form action="/delete" method="post">
 	                <input type="hidden" th:value="${item.id}" name="id"/>
-	                <button type="button" class="btn update-btn py-0 px-0" data-bs-toggle="modal"
-	                  data-bs-target="#confirmDelete">delete</button>
+	                <button type="button" class="btn-icon py-0 px-0" data-bs-toggle="modal"
+	                  data-bs-target="#confirmDelete">
+	                  <i class="fa-regular fa-trash-can"></i>
+	                </button>
 	                <div th:replace="~{modal :: modal}"></div>
 	              </form>
 	            </td>
@@ -81,4 +85,6 @@
     </main>
     <div th:replace="~{footer :: footer}"></div>
   </body>
+  <!-- font awesome script -->
+  <script src="https://kit.fontawesome.com/b78a20097c.js" crossorigin="anonymous"></script>
 </html>
