--- a/src/main/resources/templates/product-registration.html
+++ b/src/main/resources/templates/product-registration.html
@@ -16,7 +16,10 @@
       <h2 class="text-center">Register Products</h2>
       <div class="container content-box">
         <div class="d-flex justify-content-end mx-3">
-          <button class="btn px-2" onclick="location.href='product-list'">product list</button>
+          <a class="link" href="http://localhost:8080/product-list">
+            <i class="fa-regular fa-rectangle-list"></i>
+            product list
+          </a>
         </div>
         <form th:object="${product}" method="post"
           action="/product-registration" enctype="multipart/form-data" role="form">
@@ -73,11 +76,13 @@
 	      </div>
 	      <div class="my-3">
 	        <button class="btn py-1 px-2" type="submit">register</button>
-	        <button class="btn py-1 px-2" onclick="location.href='product-registration'">clear</button>
+	        <a class="btn py-1 px-2" href="http://localhost:8080/product-registration">clear</a>
 	      </div>   
         </form>
       </div>
     </main>
     <div th:replace="~{footer :: footer}"></div>
   </body>
+  <!-- font awesome script -->
+  <script src="https://kit.fontawesome.com/b78a20097c.js" crossorigin="anonymous"></script>
 </html>
