--- a/src/main/resources/templates/product-list.html
+++ b/src/main/resources/templates/product-list.html
@@ -68,10 +68,11 @@
 	              </form>
 	            </td>
 	            <td class="px-1 text-center">
-	              <form action="/delete" method="post">
+	              <form th:action="@{/}" th:method="post">
 	                <input type="hidden" th:value="${item.id}" name="id"/>
-	                <button type="button" class="btn-icon py-0 px-0" data-bs-toggle="modal"
-	                  data-bs-target="#confirmDelete">
+	                <button type="button" class="btn-icon py-0 px-0"
+	                  data-bs-toggle="modal"
+	                  th:data-bs-target="'#del-' + ${item.id}">
 	                  <i class="fa-regular fa-trash-can"></i>
 	                </button>
 	                <div th:replace="~{modal :: modal}"></div>
